--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,15 +1,6 @@
 <section class="portfolio mt-5">
     <div class="container mt-5">
-        <div class="d-flex flex-column align-items-center pt-5">
-            <div class="text-center">
-                <h2 class="text-uppercase fs-1 fw-bold my-4">contact section</h2>
-                <div class="mb-4 d-flex justify-content-center align-items-center">
-                    <div class="line"></div>
-                    <i class="fa-solid fa-star mx-3"></i>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </div>
+        <app-star [headerFromParent]="header"></app-star>
         <form class="w-75 p-3 mx-auto my-4 ng-valid ng-dirty ng-touched">
             <input type="text" placeholder="User Name" name="userName" class="form-control border-0 border-bottom py-3">
             <input type="number" placeholder="Age" name="userName" class="form-control border-0 border-bottom py-3">
