--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,7 @@
     <div class="container mt-5">
         <div class="d-flex flex-column align-items-center pt-5">
             <img [src]="imgsrc" class="w-25 mt-5">
-            <div class="text-center">
-                <h2 class="text-uppercase fs-1 fw-bold text-white my-4">start framework</h2>
-                <div class="mb-4 d-flex justify-content-center align-items-center">
-                    <div class="line" [style]="bgLine"></div>
-                    <i class="fa-solid fa-star text-white mx-3"></i>
-                    <div class="line" [style]="bgLine"></div>
-                </div>
-            </div>
+            <app-star [headerFromParent]="header" [colorStarFromParent]="colorStar" [colorLineFromParent]="colorLine" [colorHeaderFromparent]="colorHeader"></app-star>
             <div class="text-white mb-5">Graphic Artist - Web Designer - Illustrator</div>
         </div>
     </div>
